--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -76,16 +76,22 @@ jobs:
         cli_config_credentials_token: ${{ secrets.TF_API_TOKEN }}
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        AWS_REGION: ${{ secrets.AWS_REGION }}    # Initialize a new or existing Terraform working directory by creating initial files, loading any remote state, downloading modules, etc.
+        AWS_REGION: ${{ secrets.AWS_REGION }}    
+    
+      # Initialize a new or existing Terraform working directory by creating initial files, loading any remote state, downloading modules, etc.
     - name: Terraform Init
       run: terraform init
 
     # Checks that all Terraform configuration files adhere to a canonical format
     - name: Terraform Format
       run: terraform fmt -check -diff
-
+      with:
+        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        AWS_REGION: ${{ secrets.AWS_REGION }}
+        
     # Generates an execution plan for Terraform
-    - name: Terraform Plan
+    - name: Terraform Plaecrets.AWS_REGION }} 
       run: terraform plan -input=false
 
       # On push to "main", build or change infrastructure according to Terraform configuration files
