--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -51,6 +51,9 @@ on:
     - "secretoff"
   pull_request:
 
+env:
+  AWS_REGION: ${{ env.AWS_REGION }}
+
 permissions:
   contents: read
 
@@ -75,8 +78,7 @@ jobs:
       uses: hashicorp/setup-terraform@v1
       with:
         cli_config_credentials_token: ${{ secrets.TF_API_TOKEN }}
-        AWS_REGION: ${{ secrets.AWS_REGION }}
-
+  
     # Initialize a new or existing Terraform working directory by creating initial files, loading any remote state, downloading modules, etc.
     - name: Terraform Init
       run: terraform init
